--- a/configs/get_model/gmvae.yaml
+++ b/configs/get_model/gmvae.yaml
@@ -6,7 +6,7 @@ latent_dim: 10
 recon_loss_type: "BCE"
 return_probs: True
 eps: 0
-model_name: "GMVAE2"
+model_name: "GMVAE"
 loss_name: "Loss"
 encoder_kwargs: {}
 decoder_kwargs: {}
