--- a/configs/get_model/gmvae.yaml
+++ b/configs/get_model/gmvae.yaml
@@ -1,12 +1,12 @@
 k: 10
 encoder_type: "FC"
 input_size: 784
-hidden_size: 512
+hidden_size: 512 #512
 latent_dim: 10
 recon_loss_type: "BCE"
 return_probs: True
 eps: 0
-model_name: "GMVAE"
+model_name: "GMVAE2"
 loss_name: "Loss"
-encoder_kwargs: {}
+encoder_kwargs: {dropout: 0.2}
 decoder_kwargs: {}
