--- a/configs/get_model/gmvae.yaml
+++ b/configs/get_model/gmvae.yaml
@@ -4,9 +4,8 @@ input_size: 784
 hidden_size: 512 #512
 latent_dim: 10
 recon_loss_type: "BCE"
-return_probs: True
 eps: 0
-model_name: "GMVAE2"
+model_name: "GMVAE"
 loss_name: "Loss"
-encoder_kwargs: {dropout: 0.2}
-decoder_kwargs: {}
+encoder_kwargs: {dropout: 0.0}
+decoder_kwargs: {return_probs: True}
